--- a/mma/templates/mma/home.html
+++ b/mma/templates/mma/home.html
@@ -12,6 +12,8 @@
 
 <body>
 
+        We've made a change to the homescreen.
+
 
         {% for card in cards %}
             <p>{{ card.name }}</p>
