--- a/mma/templates/mma/home.html
+++ b/mma/templates/mma/home.html
@@ -13,6 +13,7 @@
 <body>
 
         We've made a change to the homescreen.
+        im gonna make another change    
 
 
         {% for card in cards %}
