--- a/mma/templates/mma/thread.html
+++ b/mma/templates/mma/thread.html
@@ -24,6 +24,10 @@
     
                     <div class="block">
 
+                        <div class="title">Discussion</div>
+
+                        Sumbit your own!
+
                         <form action="{% url 'mma:create_thread' %}" method="post">
 
                             {% csrf_token %}
