--- a/mma/templates/mma/home.html
+++ b/mma/templates/mma/home.html
@@ -5,15 +5,15 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Home • MMA matrix</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css">
+    <script src="https://kit.fontawesome.com/fe7c412db9.js" crossorigin="anonymous"></script>
 
 </head>
 
-<body>
+<body>  
 
-        We've made a change to the homescreen.
-        im gonna make another change    
+    
 
 
         {% for card in cards %}
